--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -31,7 +31,7 @@ As such, Optimum enables developers to efficiently use any of these platforms wi
     </a>
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://huggingface.co/docs/optimum-neuron/index"
       ><div class="w-full text-center bg-gradient-to-br from-orange-400 to-orange-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Optimum Neuron</div>
-      <p class="text-gray-700">Accelerate your training and inference workflows on AWS <a href="https://aws.amazon.com/machine-learning/trainium/">Trainium</a> and <a href="https://aws.amazon.com/machine-learning/inferentia/">Inferentia</a></p>
+      <p class="text-gray-700">Accelerate your training and inference workflows with <a href="https://aws.amazon.com/machine-learning/trainium/">AWS Trainium</a> and <a href="https://aws.amazon.com/machine-learning/inferentia/">AWS Inferentia</a></p>
     </a>
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="./onnxruntime/overview"
       ><div class="w-full text-center bg-gradient-to-br from-pink-400 to-pink-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">ONNX Runtime</div>
