--- a/docs/source/onnxruntime/usage_guides/models.mdx
+++ b/docs/source/onnxruntime/usage_guides/models.mdx
@@ -101,7 +101,6 @@ are exported to the ONNX format, they are split into four components that are la
 - The VAE encoder
 - The VAE decoder
 
-
 Make sure you have 🤗 Diffusers installed.
 
 To install `diffusers`:
@@ -117,19 +116,19 @@ Here is an example of how you can load an ONNX Stable Diffusion model and run in
 from optimum.onnxruntime import ORTStableDiffusionPipeline
 
 model_id = "runwayml/stable-diffusion-v1-5"
-stable_diffusion = ORTStableDiffusionPipeline.from_pretrained(model_id, revision="onnx")
+pipeline = ORTStableDiffusionPipeline.from_pretrained(model_id, revision="onnx")
 prompt = "sailing ship in storm by Leonardo da Vinci"
-image = stable_diffusion(prompt).images[0]
+image = pipeline(prompt).images[0]
 ```
 
 To load your PyTorch model and convert it to ONNX on-the-fly, you can set `export=True`.
 
 ```python
-stable_diffusion = ORTStableDiffusionPipeline.from_pretrained(model_id, export=True)
+pipeline = ORTStableDiffusionPipeline.from_pretrained(model_id, export=True)
 
 # Don't forget to save the ONNX model
 save_directory = "a_local_path"
-stable_diffusion.save_pretrained(save_directory)
+pipeline.save_pretrained(save_directory)
 ```
 
 ![img](https://huggingface.co/datasets/optimum/documentation-images/resolve/main/onnxruntime/stable_diffusion_v1_5_ort_sail_boat.png)
@@ -145,7 +144,7 @@ from io import BytesIO
 from optimum.onnxruntime import ORTStableDiffusionImg2ImgPipeline
 
 model_id = "runwayml/stable-diffusion-v1-5"
-pipe = StableDiffusionImg2ImgPipeline.from_pretrained(model_id, revision="onnx")
+pipeline = ORTStableDiffusionImg2ImgPipeline.from_pretrained(model_id, revision="onnx")
 
 url = "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/assets/stable-samples/img2img/sketch-mountains-input.jpg"
 
@@ -155,7 +154,7 @@ init_image = init_image.resize((768, 512))
 
 prompt = "A fantasy landscape, trending on artstation"
 
-image = pipe(prompt=prompt, image=init_image, strength=0.75, guidance_scale=7.5).images[0]
+image = pipeline(prompt=prompt, image=init_image, strength=0.75, guidance_scale=7.5).images[0]
 image.save("fantasy_landscape.png")
 ```
 
@@ -169,7 +168,7 @@ from io import BytesIO
 from optimum.onnxruntime import ORTStableDiffusionInpaintPipeline
 
 model_id = "runwayml/stable-diffusion-inpainting"
-pipe = ORTStableDiffusionInpaintPipeline.from_pretrained(model_id, revision="onnx")
+pipeline = ORTStableDiffusionInpaintPipeline.from_pretrained(model_id, revision="onnx")
 
 def download_image(url):
     response = requests.get(url)
@@ -182,5 +181,5 @@ init_image = download_image(img_url).resize((512, 512))
 mask_image = download_image(mask_url).resize((512, 512))
 
 prompt = "Face of a yellow cat, high resolution, sitting on a park bench"
-image = pipe(prompt=prompt, image=init_image, mask_image=mask_image).images[0]
+image = pipeline(prompt=prompt, image=init_image, mask_image=mask_image).images[0]
 ```
