--- a/docs/source/onnxruntime/usage_guides/models.mdx
+++ b/docs/source/onnxruntime/usage_guides/models.mdx
@@ -104,7 +104,7 @@ are exported to the ONNX format, they are split into four components that are la
 Make sure you have 🤗 Diffusers installed.
 
 To install `diffusers`:
-```
+```bash
 pip install diffusers
 ```
 
@@ -189,7 +189,7 @@ image = pipeline(prompt=prompt, image=init_image, mask_image=mask_image).images[
 
 Before using `ORTStableDiffusionXLPipeline` make sure to have `diffusers` and `invisible_watermark` installed. You can install the libraries as follows:
 
-```
+```bash
 pip install diffusers
 pip install invisible-watermark>=2.0
 ```
