--- a/docs/source/bettertransformer/overview.mdx
+++ b/docs/source/bettertransformer/overview.mdx
@@ -29,6 +29,7 @@ We provide an integration with `BetterTransforer` API to use this function in ðŸ
 The list of supported model below:
 
 - [AlBERT](https://arxiv.org/abs/1909.11942)
+- [Bark](https://github.com/suno-ai/bark)
 - [BART](https://arxiv.org/abs/1910.13461)
 - [BERT](https://arxiv.org/abs/1810.04805)
 - [BERT-generation](https://arxiv.org/abs/1907.12461)
