Update supported torch version for bettertransformer

--- a/docs/source/bettertransformer/tutorials/convert.mdx
+++ b/docs/source/bettertransformer/tutorials/convert.mdx
@@ -19,7 +19,7 @@ You can easily use the `BetterTransformer` integration with 🤗 Optimum, first 
 pip install transformers accelerate optimum
 ```
 
-Also, make sure to install the latest version of PyTorch by following the guidelines on the [PyTorch official website](https://pytorch.org/get-started/locally/). Note that `BetterTransformer` API is only compatible with `torch>=1.13`, so make sure to have this version installed on your environement before starting.
+Also, make sure to install the latest version of PyTorch by following the guidelines on the [PyTorch official website](https://pytorch.org/get-started/locally/). Note that `BetterTransformer` API is only compatible with `torch>=2.0, so make sure to have this version installed on your environement before starting.
 If you want to benefit from the `scaled_dot_product_attention` function (for decoder-based models), make sure to use at least `torch>=2.0`.
 
 ## Step 1: Load your model
