--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -85,6 +85,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - ResNet
 - Roberta
 - Roformer
+- RT-DETR
 - SAM
 - Segformer
 - SEW
